# AutoML_App

./: .gitignore  README.md  ml_demo_app.py  pyproject.toml
Docs/: demo_ml_app.md
Docs/demo_ml_utils/: manager.md  ml_utils.md  plot.md  preprocessing.md  select_data.md  xai.md
components/: data_editor.py
data/: winequality-red.csv  winequality-white.csv
data_japanese/: アヤメデータ.csv  ワインデータ.csv  乳がんデータ.csv  手書き数字データ.csv  数学の成績データ.csv  白ワインの品質データ.csv  糖尿病データ.csv  赤ワインの品質データ.csv
utils/: manager.py  ml_utils.py  plot.py  preprocessin.py  select_data.py  xai.py
